--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <p>Hello</p>
-<p>This is Daling's website. </p>
+<p>This is Xinping's website. </p>
 
 <ul>
   <li> <a href="https://www.google.com">personal website</a> </li>
